# krr-2.1

./: LICENSE  README.md  WhitePaper.md  krr_v2.1.py  pyproject.toml
.github/workflows/: tests.yml
tests/: simple_examples_test.py
