[project]
name = "krr"
version = "2.2.0"
description = "KRR v2.0 is a strictly logical romanization system for Hangul."
readme = "README.md"
authors = [
    { name = "JUN JIHOON", email = "r8dymade@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
tests = [
    "pytest>=9.0.2",
    "pytest-doctestplus>=1.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["krr.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
